# veracite

./: .gitignore  LICENSE  README.md  USAGE.md  pyproject.toml  requirements.txt
examples/: sample.bib
tests/: test_core.py
veracite/: __init__.py  __main__.py  judge.py  normalize.py  preflight.py  report.py  sources.py
