[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veracite"
description = "Catch AI-fabricated citations in your .bib file by cross-checking against arXiv, Crossref, OpenAlex, and Semantic Scholar."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tingrui Huang", email = "t.huang2@student.tue.nl" }]
keywords = [
    "bibtex",
    "citation",
    "verification",
    "academic",
    "arxiv",
    "crossref",
    "openalex",
    "semantic-scholar",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dynamic = ["version"]
dependencies = [
    "bibtexparser>=1.4,<2.0",
    "requests>=2.31",
    "unidecode>=1.3",
    "rapidfuzz>=3.0",
]

[project.urls]
Homepage = "https://github.com/tingrui-huang/veracite"
Repository = "https://github.com/tingrui-huang/veracite"
Issues = "https://github.com/tingrui-huang/veracite/issues"

[project.scripts]
veracite = "veracite.__main__:main"

[tool.setuptools]
packages = ["veracite"]

[tool.setuptools.dynamic]
version = { attr = "veracite.__version__" }
